src/objects/Price_List__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catheter_Electrodes__c</fullName>
        <label>Catheter Electrodes</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_ISO_Code__c</fullName>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>ABW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Device_Price__c</fullName>
        <label>New Device Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Procedure_Type__c</fullName>
        <label>Procedure Type</label>
        <picklist>
            <picklistValues>
                <fullName>NavX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NavX SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NavX SE and MediGuide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediGuide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NavX and Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediGuide and NavX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediGuide and Array</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>ICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transseptal Needle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP Study - Introducers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP Study - Diagnostic EP Catheters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ablation Catheter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Manuf_Type_Tip_Size__c</fullName>
        <label>Product Manuf \Type \Tip Size</label>
        <picklist>
            <picklistValues>
                <fullName>Transseptal Needle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens/BioSense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Scientific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agilis NxT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mullins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (competitive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circ fxd loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circ var loop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Density</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4/5mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8/10mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cryo Balloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cryo Cath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NavX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediGuide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steer - MediGuide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resterilized_Device_Price__c</fullName>
        <label>Resterilized Device Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <formula>IF(OR(TEXT(Product_Category__c)=&quot;Transseptal Needle&quot;,TEXT(Product_Category__c)=&quot;Array&quot;,TEXT(Product_Category__c)=&quot;MediGuide&quot;,TEXT(Product_Category__c)=&quot;MediGuide and Array&quot;, TEXT(Product_Category__c)=&quot;MediGuide and NavX&quot;,TEXT(Product_Category__c)=&quot;NavX SE&quot;,TEXT(Product_Category__c)=&quot;NavX SE and MediGuide&quot;,TEXT(Product_Category__c)=&quot;NavX&quot;,TEXT(Product_Category__c)=&quot;NavX and Array&quot;), TEXT(Product_Category__c), 
IF(OR(TEXT(Product_Category__c)=&quot;ICE&quot;, TEXT(Product_Category__c)=&quot;EP Study - Introducers&quot;), TEXT(Product_Category__c) + &quot;;&quot; + TEXT(Product_Manuf_Type_Tip_Size__c),
IF(TEXT(Product_Category__c)=&quot;Ablation Catheter&quot;, TEXT(Product_Category__c) + &quot;;&quot; + TEXT(Product_Manuf_Type_Tip_Size__c),
IF(TEXT(Product_Category__c)=&quot;EP Study - Diagnostic EP Catheters&quot;, TEXT(Product_Category__c) + &quot;;&quot; + TEXT(Product_Manuf_Type_Tip_Size__c) + &quot;;&quot; + TEXT(Catheter_Electrodes__c), TEXT(Product_Manuf_Type_Tip_Size__c)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueID</label>
        <type>Text</type>
    </fields>
    <label>Price List</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>UniqueID__c</columns>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Manuf_Type_Tip_Size__c</columns>
        <columns>New_Device_Price__c</columns>
        <columns>Resterilized_Device_Price__c</columns>
        <columns>Catheter_Electrodes__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Price List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List</pluralLabel>
    <recordTypes>
        <fullName>AF_Price_List</fullName>
        <active>true</active>
        <label>AF Price List</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>